# timescale-example

./: .env  .envrc  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml
.grafana/dashboards/: workflow_run.json
.sqlx/: query-38ba51eb9a619a93a4d9aaa8202e1ad7fc3529fbf7d701e4e95d3eeac022f3cb.json  query-7773a891c4f26154dbb64d5eac987b91e4cc3a68de7302f43da789a72dd4927a.json
examples/: seed_data.rs
migrations/: 0001_workflow-run.sql  20250619142444_workflow_runs.sql  20250619163546_grafana_setup.sql
sql/: crypto_assets_example.sql  helpful_timescale.sql  workflow_runs.sql
src/: lib.rs  main.rs
timescale-db-helm/: Chart.yaml  README.md  values.yaml
timescale-db-helm/templates/: _helpers.tpl  configmap.yaml  secret.yaml  service.yaml  statefulset.yaml
